# barchiver

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/barchiver/: __init__.py  configuration.py  models.py  repository.py
tests/: conftest.py  test_configuration.py  test_models.py  test_repository.py
